# Path-Tracer

./: .gitignore  AABB.cpp  AABB.h  AxisAlignedBB.cpp  AxisAlignedBB.h  BVH.cpp  BVH.h  CMakeLists.txt  Camera.cpp  Camera.h  ColourCache.h  DynMat.cpp  DynMat.h  File.cpp  File.h  Glass.cpp  HitRecord.h  Lambertian.cpp  Material.cpp  Material.h  NormalMat.cpp  Plane.cpp  Plane.h  README.md  Ray.cpp  Ray.h  Rectangle.cpp  Rectangle.h  RenderStack.h  Shape.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  Vector3.cpp  Vector3.h  Vertex.cpp  Vertex.h  (+11 more)
src/: Camera.cpp  Camera.h  ColourCache.h  DynMat.h  File.cpp  File.h  Glass.h  HitRecord.h  Lambertian.h  ModelLoader.cpp  ModelLoader.h  NormalMat.h  RenderStack.h  Triangle.cpp  Triangle.h  Vector3.cpp  Window.h  World.cpp  World.h  main.cpp
